--- a/groupoffice/docker-compose.yml
+++ b/groupoffice/docker-compose.yml
@@ -4,13 +4,14 @@ services:
     image: intermesh/groupoffice:latest
     restart: always
     ports:
-      - "9000:80"
+      - "7000:80"
+      - "7001:443"
     links:
       - db
     volumes:
       - "godata:/var/lib/groupoffice:cached"
       - "goetc:/etc/groupoffice:cached"
-      # - "gostudio:/usr/local/share/groupoffice/go/modules/studio:cached"
+      - "gostudio:/usr/local/share/groupoffice/go/modules/studio:cached"
       # - ./src/studio:/usr/local/share/groupoffice/go/modules/studio
       # - "./config/ssl/groupoffice:/etc/ssl/groupoffice"
     env_file:
@@ -29,5 +30,5 @@ services:
 volumes:
   godata:
   goetc:
-  #gostudio:
+  gostudio:
   dbdata:
