--- a/baobab/runner/examples/runner_example.dSYM/Contents/Info.plist
+++ b/baobab/runner/examples/runner_example.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.postgresql</string>
+		<string>com.apple.xcode.dsym.runner_example</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
