--- a/baobab/services/postgresql/postgresql.conf
+++ b/baobab/services/postgresql/postgresql.conf
@@ -1,5 +1,5 @@
 # -----------------------------
-# PostgreSQL configuration file
+# postgresql configuration file
 # -----------------------------
 #
 # This file consists of lines of the form:
@@ -8,7 +8,7 @@
 #
 # (The "=" is optional.)  Whitespace may be used.  Comments are introduced with
 # "#" anywhere on a line.  The complete list of parameter names and allowed
-# values can be found in the PostgreSQL documentation.
+# values can be found in the postgresql documentation.
 #
 # The commented-out settings shown in this file represent the default values.
 # Re-commenting a setting is NOT sufficient to revert it to the default value;
@@ -21,7 +21,7 @@
 # require a server shutdown and restart to take effect.
 #
 # Any parameter can also be given as a command-line option to the server, e.g.,
-# "postgres -c log_connections=on".  Some parameters can be changed at run time
+# "postgresql -c log_connections=on".  Some parameters can be changed at run time
 # with the "SET" SQL command.
 #
 # Memory units:  B  = bytes            Time units:  us  = microseconds
@@ -464,13 +464,13 @@ min_wal_size = 80MB
 
 # These are relevant when logging to syslog:
 #syslog_facility = 'LOCAL0'
-#syslog_ident = 'postgres'
+#syslog_ident = 'postgresql'
 #syslog_sequence_numbers = on
 #syslog_split_messages = on
 
 # This is only relevant when logging to eventlog (Windows):
 # (change requires restart)
-#event_source = 'PostgreSQL'
+#event_source = 'postgresql'
 
 # - When to Log -
 
@@ -692,7 +692,7 @@ log_timezone = 'Asia/Dubai'
 # - Locale and Formatting -
 
 datestyle = 'iso, mdy'
-#intervalstyle = 'postgres'
+#intervalstyle = 'postgresql'
 timezone = 'Asia/Dubai'
 #timezone_abbreviations = 'Default'     # Select the set of available time zone
 					# abbreviations.  Currently, there are
@@ -748,7 +748,7 @@ default_text_search_config = 'pg_catalog.simple'
 # VERSION AND PLATFORM COMPATIBILITY
 #------------------------------------------------------------------------------
 
-# - Previous PostgreSQL Versions -
+# - Previous postgresql Versions -
 
 #array_nulls = on
 #backslash_quote = safe_encoding	# on, off, or safe_encoding
