--- a/builders/zinit/Dockerfile
+++ b/builders/zinit/Dockerfile
@@ -6,7 +6,8 @@ RUN apk add --no-cache git musl-dev
 
 RUN rm -rf /code && mkdir -p /code && cd /code && git clone https://github.com/threefoldtech/zinit    
 
-RUN cd /code/zinit && cargo build --release --target=x86_64-unknown-linux-musl
+# RUN cd /code/zinit && cargo build --release --target=x86_64-unknown-linux-musl
+RUN cd /code/zinit && cargo build --release
 
 RUN cp /code/zinit/target/release/zinit /bin/
 
